ModHTML - Phrase division added

--- a/HUFSGSITCAT.vbproj
+++ b/HUFSGSITCAT.vbproj
@@ -72,10 +72,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmMain.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FrmMain.Designer.vb">
       <DependentUpon>FrmMain.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FrmMain.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ModHTML.vb" />
