--- a/HUFSGSITCAT.vbproj
+++ b/HUFSGSITCAT.vbproj
@@ -79,6 +79,7 @@
       <DependentUpon>FrmMain.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ModFile.vb" />
     <Compile Include="ModHTML.vb" />
     <Compile Include="ModString.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
